<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="#0D47A1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8F5E9"
        android:minHeight="360dp"
        app:layout_constraintBottom_toTopOf="@id/btnLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialTitle"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:paddingTop="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:padding="5dp"
                    android:text="@string/text_loginTab_sign_in"
                    android:textSize="30sp"
                    app:autoSizeTextType="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:padding="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginTab_TextInput_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:startIconDrawable="@drawable/ic_edit_48">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginTab_TextEdit_Email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_email_id"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:minHeight="42dp"
                        android:textColorHint="#004D40"
                        android:windowSoftInputMode="adjustResize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginTab_TextInput_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"

                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_lock_48">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginTab_TextEdit_Password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="start"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:maxLength="15"

                        android:windowSoftInputMode="adjustResize" />
                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginTab_Btn_SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:minHeight="48dp"
                android:padding="15dp"
                android:text="@string/text_loginTab_sign_in"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginActivity_already_have_a_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_loginActivity_already_have_a_account"
                android:textColor="#000000"
                android:textSize="18dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />
<!--

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginActivity_btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_loginActivity_sign_in"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".92"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="SpUsage" />
-->

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginActivity_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_loginActivity_createAccount"
                android:textColor="#000000"
                android:textSize="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/loginActivity_btnSignUp"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="SpUsage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginActivity_btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_loginActivity_sign_up"
                android:textSize="20dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="SpUsage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
